<resources>
    <string name="app_name">Si Jobs</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember">remember me</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="new_profile">New Profile!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="your_date_of_birth">Your date of Birth</string>
    <string name="your_email">Your email</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="your_address">Your address</string>
    <string name="gender">Gender</string>
    <string name="your_name">Your name</string>
    <string name="not_account">Don\'t have an account? <b>Sign Up</b> </string>
    <string name="sign_up">Sign Up</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!--  Spinner transfer PaymentFragment  -->
    <string-array name="payment">
        <item>Bank Transfer</item>
        <item>Cash</item>
    </string-array>

    <!--  Spinner cash PaymentFragment  -->
    <string-array name="cash">
        <item>Cash</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="si_jobs">SI JOBS</string>
    <string name="tagline1">It\'s not just a Job</string>
    <string name="get_started">Get Started</string>
    <string name="ainsley_lisa">Ainsley Lisa</string>
    <string name="lorem_chat">Lorem ipsum dolor sit amet, consectetur...</string>
    <string name="aether">Aether</string>
    <string name="lewis_hamilton">Lewis Hamilton</string>
    <string name="emmanuelle_proulx">Emmanuelle Proulx</string>
    <string name="_10_mins_ago">10 mins ago</string>
    <string name="_2_days_ago">2 days ago</string>
    <string name="a_week_ago">a week ago</string>
    <string name="a_month_ago">a month ago</string>
    <string name="search">Search</string>
    <string name="conversation">Conversation</string>
    <string name="let_s_discover_your">Let\'s discover your</string>
    <string name="part_job">part job</string>
    <string name="content_creator">Content Creator</string>
    <string name="admin">Admin</string>
    <string name="podcaster">Podcaster</string>
    <string name="kurir">Kurir</string>
    <string name="cashier">Cashier</string>
    <string name="baby_sitter">Baby Sitter</string>
    <string name="history">History</string>
    <string name="view_all">View all</string>
    <string name="done">(Done)</string>
    <string name="designer">Designer</string>
    <string name="_17_februari_2022">17 Februari 2022</string>
    <string name="give_review">Give Review</string>
    <string name="_15_februari_2022">15 Februari 2022</string>
    <string name="your_job">Your Job</string>
    <string name="job_tasks">Job Tasks</string>
    <string name="done1">Done</string>
    <string name="lorem_job">Lorem ipsum dolor sit amet, consectetur adipiscing...</string>
    <string name="more">More</string>
    <string name="influencer">Influencer</string>
    <string name="home">Home</string>
    <string name="job">Job</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="experience">Experience</string>
    <string name="age">Age</string>
    <string name="titikdua">:</string>
    <string name="change_profile">Change Profile</string>
    <string name="change_skill">Change Skill</string>
    <string name="your_payment_success">Your payment success!</string>
    <string name="can_add_more_skill_now">Can add more skill now!</string>
    <string name="finish">Finish</string>
    <string name="pay">Pay</string>
    <string name="payment_method">Payment method</string>
    <string name="your_total_payment_is">Your total payment is</string>
    <string name="rp_50_000_00">Rp 50.000,00</string>
    <string name="payment">Payment</string>
    <string name="add_your_skill">Add Your Skill</string>
    <string name="all">All</string>
    <string name="asisten">Asisten</string>
    <string name="pay_to_add">You just can add three skills for free, if you want to add more, you will get some payment</string>
    <string name="add_more_skills">Add more skills</string>
    <string name="penebang_pohon">Penebang pohon</string>
    <string name="cuci_mobil">Cuci mobil</string>
    <string name="service_kendaraan">Service kendaraan</string>
    <string name="tukang_jahit">Tukang jahit</string>
    <string name="bersih_bersih">Bersih-bersih</string>
    <string name="reparasi_furniture">Reparasi furniture</string>
    <string name="guru_privat">Guru privat</string>
    <string name="pengisi_kuisioner">Pengisi kuisioner</string>
    <string name="hairstylish">Hairstylish</string>
    <string name="asisten_rumah_tangga">Asisten rumah tangga</string>
    <string name="tukang_pijit">Tukang pijit</string>
    <string name="service_elektronik">Service elektronik</string>
    <string name="pengasuh_anak">Pengasuh anak</string>
    <string name="driver">Driver</string>
    <string name="kesenian">Kesenian</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="welcome_to_si_jobs">Welcome to SI JOBS</string>

</resources>