<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_white"
    tools:context=".AddSkillFragment">

    <ImageView
        android:id="@+id/iv_backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/text_add_skill"
        app:layout_constraintEnd_toStartOf="@+id/text_add_skill"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/text_add_skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_your_skill"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_add_skill">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/shape_login_btn"
                android:text="@string/all"
                android:fontFamily="@font/roboto_medium"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/selector_shape_skill"
                android:text="@string/asisten"
                android:fontFamily="@font/roboto_medium"
                android:textAllCaps="false"
                android:textColor="@color/skill_text_color"
                android:textSize="15sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/selector_shape_skill"
                android:text="@string/kesenian"
                android:fontFamily="@font/roboto_medium"
                android:textAllCaps="false"
                android:textColor="@color/skill_text_color"
                android:textSize="15sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/selector_shape_skill"
                android:text="@string/pendidikan"
                android:fontFamily="@font/roboto_medium"
                android:textAllCaps="false"
                android:textColor="@color/skill_text_color"
                android:textSize="15sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/selector_shape_skill"
                android:text="@string/all"
                android:fontFamily="@font/roboto_medium"
                android:textAllCaps="false"
                android:textColor="@color/skill_text_color"
                android:textSize="15sp" />

        </LinearLayout>

    </HorizontalScrollView>

    <Button
        android:id="@+id/item8"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/selector_shape_skill"
        android:paddingHorizontal="20dp"
        android:text="@string/pengisi_kuisioner"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textColor="@color/skill_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/item7"
        app:layout_constraintStart_toEndOf="@+id/item7"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/item6"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/selector_shape_skill"
        android:paddingHorizontal="20dp"
        android:text="@string/asisten_rumah_tangga"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textColor="@color/skill_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/item5"
        app:layout_constraintStart_toEndOf="@+id/item5"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/item2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/selector_shape_skill"
        android:paddingHorizontal="20dp"
        android:text="@string/pengasuh_anak"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textColor="@color/skill_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/item1"
        app:layout_constraintStart_toEndOf="@+id/item1"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/item4"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/selector_shape_skill"
        android:paddingHorizontal="20dp"
        android:text="@string/tukang_pijit"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textColor="@color/skill_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/item3"
        app:layout_constraintStart_toEndOf="@+id/item3"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/item10"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/selector_shape_skill"
        android:paddingHorizontal="20dp"
        android:text="@string/reparasi_furniture"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textColor="@color/skill_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/item9"
        app:layout_constraintStart_toEndOf="@+id/item9"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/item12"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/selector_shape_skill"
        android:paddingHorizontal="20dp"
        android:text="@string/tukang_jahit"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textColor="@color/skill_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/item11"
        app:layout_constraintStart_toEndOf="@+id/item11"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/item14"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/selector_shape_skill"
        android:paddingHorizontal="20dp"
        android:text="@string/cuci_mobil"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textColor="@color/skill_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/item13"
        app:layout_constraintStart_toEndOf="@+id/item13"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/item13"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/selector_shape_skill"
        android:paddingHorizontal="20dp"
        android:text="@string/penebang_pohon"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textColor="@color/skill_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/item11"
        app:layout_constraintTop_toBottomOf="@+id/item11"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/item1"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_shape_skill"
        android:paddingHorizontal="20dp"
        android:text="@string/driver"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textColor="@color/skill_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/item3"
        app:layout_constraintStart_toStartOf="@+id/text_add_skill"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view"
        app:layout_constraintVertical_chainStyle="spread"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/item3"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/selector_shape_skill"
        android:paddingHorizontal="20dp"
        android:text="@string/service_elektronik"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textColor="@color/skill_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/item5"
        app:layout_constraintStart_toStartOf="@+id/item1"
        app:layout_constraintTop_toBottomOf="@+id/item1"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/item5"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/selector_shape_skill"
        android:paddingHorizontal="20dp"
        android:text="@string/hairstylish"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textColor="@color/skill_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/item7"
        app:layout_constraintStart_toStartOf="@+id/item3"
        app:layout_constraintTop_toBottomOf="@+id/item3"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/item7"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/selector_shape_skill"
        android:paddingHorizontal="20dp"
        android:text="@string/guru_privat"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textColor="@color/skill_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/item9"
        app:layout_constraintStart_toStartOf="@+id/item5"
        app:layout_constraintTop_toBottomOf="@+id/item5"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/item9"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/selector_shape_skill"
        android:paddingHorizontal="20dp"
        android:text="@string/bersih_bersih"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textColor="@color/skill_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/item11"
        app:layout_constraintStart_toStartOf="@+id/item7"
        app:layout_constraintTop_toBottomOf="@+id/item7"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/item11"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/selector_shape_skill"
        android:paddingHorizontal="20dp"
        android:text="@string/service_kendaraan"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textColor="@color/skill_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/item13"
        app:layout_constraintStart_toStartOf="@+id/item9"
        app:layout_constraintTop_toBottomOf="@+id/item9"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium_italic"
        android:text="@string/pay_to_add"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        tools:layout_editor_absoluteX="50dp" />

    <Button
        android:id="@+id/add_more"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/selector_shape_skill"
        android:fontFamily="@font/roboto"
        android:text="@string/add_more_skills"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/save_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/save_btn"
        app:layout_constraintTop_toBottomOf="@+id/save_btn"
        app:layout_constraintVertical_bias="0.219"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_yellow"
        android:fontFamily="@font/roboto"
        android:paddingHorizontal="60dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>